--- a/templates/index.html
+++ b/templates/index.html
@@ -56,8 +56,8 @@
                         <thead class="mdb-color darken-3">
                             <tr class="text-black">
                                 <th>#</th>
-                                <th>Functionaly</th>
-                                <th>Descritption</th>
+                                <th>Functionality</th>
+                                <th>Description</th>
                             </tr>
                         </thead>
                         <!--Table head-->
