--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="http://34.171.28.83:5000/api/currency-pairs">Crypto-Pairs</a></li>
-              <li><a class="dropdown-item" href="http://34.171.28.83:5000/api/currencies?page=1&limit=10&paid=BTCUSDT">API-Data</a></li>
+              <li><a class="dropdown-item" href="http://34.171.28.83:5000/api/currencies?page=1&limit=10&pair=BTCUSDT">API-Data</a></li>
               <li><a class="dropdown-item" href="http://34.171.28.83:5000/api/allcurrencies">All-Data</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#">Graphs</a></li>
